--- a/metadata/_book.yml
+++ b/metadata/_book.yml
@@ -1,7 +1,7 @@
 book: 
-  title: "Refining reporting guidelines using behaviour change theory: Draft-20-June-2024"
+  title: "Refining reporting guidelines using behaviour change theory: Draft-26-June-2024"
   # author: "James Harwood\n\nORCID: 0000-0003-3530-3231\n\nDoctor of Philosophy\n\nNuffield Department of Orthopaedics, Rheumatology and Musculoskeletal Sciences\n\nThe University of Oxford\n\n{{< pagebreak >}}"
-  downloads: [docx, pdf]
+  downloads: [docx] #, pdf]
   page-navigation: true
   chapters: 
     - text: "Title Page"
