--- a/_variables.yml
+++ b/_variables.yml
@@ -488,7 +488,7 @@ titles:
   discussion: Discussion
   focus_groups: 'Generating ideas to address influences affecting reporting guideline adherence: focus groups with reporting guideline developers, advocates, and publishers'
   introduction: Introduction
-  pilot: 'Refining the intervention: qualitative study with authors'
+  pilot: 'Refining the intervention: interviewing authors and a qualitative description analysis'
   reflexivity: Reflections on starting my DPhil
   survey_content: 'What influences might researchers encounter when using reporting guidelines? Part 2: Describing the questions asked in quantitative surveys.'
   synthesis: 'What influences might researchers encounter when using reporting guidelines? Part 1: A thematic synthesis'
