--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,45 +21,41 @@ format:
     toc-depth: 4
     theme: [cosmo, theme.scss]
     smooth-scroll: true
-    downloads: [docx] #, pdf]
+    downloads: [docx, pdf]
     highlight-style: github
     include-in-header: metadata/noindex.html
     css: styles.css
   docx:
       from: markdown+grid_tables
-      reference-doc: custom-reference-doc.docx
+      reference-doc: reference.docx
       toc: true
       toc-depth: 2
       highlight-style: github
   # pdf: 
-  #     documentclass: scrbook
-  #     pdf-engine: xelatex
-  #     pdf-engine-opt: --xelatex
+  #     toc: true
+  #     number-sections: true
+  #     colorlinks: true
+  #     pdf-engine: wkhtmltopdf
+  #     pdf-engine-opts: 
+  #       - "--no-background"
+  #       - "--header-right"
+  #       - "\"[page]/[toPage]\" --top 2cm"
   #     latex-max-runs: 3
   #     keep-tex: false
   #     colorlinks: false
   #     papersize: a4
   #     linestretch: 1.5
-  #     geometry:
-  #         - inner=3cm
-  #         - outer=4cm
-  #         - top=3cm
-  #         - bottom=4cm
-  #         - headsep=22pt
-  #         - headheight=11pt
-  #         - footskip=33pt
-  #         - ignorehead
-  #         - ignorefoot
-  #         - heightrounded
   #     toc: true
   #     toc-depth: 2
   #     number-sections: true 
   #     toc-title: Table of Contents
-  #     fontsize: 12pt
-  #     mainfont: "Times New Roman"
-  #     sansfont: "Arial"
-  #     monofont: "Courier New"
-  #     include-in-header: include-in-header.tex
+  #     margin-left: "0cm"
+  #     margin-right: "0cm"
+  #     margin-top: "3cm"
+  #     margin-bottom: "4cm"
+      
+  #     header-right:     
+  #       # include-in-header: include-in-header.tex
 number-depth: 2
 
 metadata-files:
