--- a/metadata/_book_quarto.yml
+++ b/metadata/_book_quarto.yml
@@ -1,23 +1,29 @@
 book: 
-  title: "Refining reporting guidelines using behaviour change theory "
-  author: 
-    name: James Harwood
-  # cover-image: oxford.png
-  downloads: [pdf]
+  title: "Refining reporting guidelines using behaviour change theory"
+  subtitle: "![oxford.png](oxford.png)\n\n\n\n\n\n\n\nJames Harwood\n\nSt. Cross College, The University of Oxford\n\n\n\nA thesis submitted for the degree of Doctor of Philosophy\n\nMichaelmas Term 2024"
   abstract: |
     The lasting legacy of most medical research is the written account. When writing up their work, researchers often omit information that readers &mdash; including clinicians, reviewers, patients, and other researchers &mdash; need to fully understand, appraise, replicate, or apply the research. Reporting guidelines try to solve this problem. They are community-created recommendations of information to include when writing up research so that everybody can use it. The first reporting guideline was created almost 30 years ago, and many more have been created since. Most leading medical journals ask authors to adhere to reporting guidelines, yet adherence remains low in almost all medical fields. When authors do not adhere to reporting guidelines their work is less transparent, less valuable, contributes less to patient outcomes and has potential to inadvertently harm by distorting the evidence base. The aim of my thesis is to understand why authors do not adhere to reporting guidelines when writing up medical research, and to address these reasons with the intention of increasing adherence in the future. 
 
     I began my thesis with this clear aim but without a route to get there. My first step was a qualitative synthesis (chapter {{< var chapters.synthesis >}}) of research exploring authors experiences of reporting guidelines, and I discovered authors' adherence to reporting guidelines is influenced by features of the guidelines themselves, but also the system that surrounds them including the websites that disseminate them and the people and policies of the broader scholarly ecosystem. I probed this system further with a review of quantitative surveys and an evaluation of a key dissemination website (chapters {{< var chapters.review >}} & {{< var chapters.web-audit >}}). 
 
     Given the complexity of the system and the complexity of the behaviour in question, I realised I would need a framework to help me make sense of them. I decided to use the Behaviour Change Wheel (chapter {{< var chapters.bcw >}}), a well established and evidenced framework for designing and defining complex behaviour change interventions. I led workshops and focus groups (chapters {{< var chapters.workshops >}} & {{< var chapters.focus-groups >}}) to guide stakeholders through frameworks' steps and, ultimately, ended up identifying {{< var counts.barriers >}} things that needed to change, and {{< var counts.sub_ideas_pre_jh >}} ideas of how to change them. These ideas were applicable to guideline developers, the EQUATOR Network, journals, publishers, funders, ethics committees, and institutions. 
-    
+
     I decided that redesigning reporting guidelines and EQUATOR's website would be an effective, affordable, acceptable, and equitable way to realise many of the generated ideas. I defined {{< var counts.ics.unique >}} intervention components and managed to incorporate {{< var counts.ics.included_unique >}} into a prototype website that included a redesigned reporting guideline (the Standards for Reporting Qualitative Research) and the EQUATOR Network's home page (chapter {{< var chapters.defining-content >}}). I then explored authors experiences of using this prototype through in-depth interviews, observation, think aloud, and writing appraisals (chapter {{< var chapters.pilot >}}) and I identified {{< var counts.pilot.deficiencies >}} possible areas for improvement. 
 
     My key outputs include a design blueprint for user-friendly reporting guideline resources, and an online platform for creating and hosting resources following this blueprint. This platform will benefit guideline developers who typically lack the money, time, and skills to create user friendly resources. I have secured funding for a feasibility study and parallel process evaluation to explore the acceptability and usability of this platform amongst authors submitting to journals, in preparation for a future evaluation to determine whether my redesign leads to more authors adhering to reporting guidelines successfully. 
+
+  downloads: [docx, pdf]
   page-navigation: true
   chapters: 
+    - index.qmd
+    - text: Acknowledgements
+      file: "chapters/acknowledgements.qmd"
+    # - text: Glossary of key terms
+    #   file: "chapters/glossary.qmd"
+    - text: List of Abbreviations
+      file: "chapters/abbreviations.qmd"
     - text: "Background"
-      file: index.qmd
+      file: chapters/1_introduction/index.qmd  
     - text: "Reflexivity"
       file: chapters/2_reflexivity/index.qmd
     - part: "**Identifying influences**"
@@ -44,61 +50,41 @@ book:
           file: chapters/10_pilot/index.qmd
     - text: "Discussion"
       file: chapters/11_discussion/index.qmd
-    - chapters/references.qmd
-  appendices:
-  - text: "{{< var appendix.search >}}. Search Strategies"
-    file: chapters/appendix/_synthesis_search_strategies.qmd
-  - text: "{{< var appendix.workshop_step_1 >}}. BCW Step 1"
-    file: chapters/appendix/workshops/step_1.qmd
-  - text: "{{< var appendix.workshop_step_2 >}}. BCW Step 2"
-    file: chapters/appendix/workshops/step_2.qmd
-  - text: "{{< var appendix.workshop_step_3 >}}. BCW Step 3"
-    file: chapters/appendix/workshops/step_3.qmd
-  - text: "{{< var appendix.workshop_step_4 >}}. BCW Step 4"
-    file: chapters/appendix/workshops/step_4.qmd
-  - text: "{{< var appendix.workshop_step_5 >}}. BCW Step 5"
-    file: chapters/appendix/workshops/step_5.qmd
-  - text: "{{< var appendix.workshop_step_6 >}}. BCW Stage 6"
-    file: chapters/appendix/workshops/step_6.qmd
-  - text: "{{< var appendix.workshop_step_7 >}}. BCW Stage 7"
-    file: chapters/appendix/workshops/step_7.qmd
-  - text: "{{< var appendix.barriers >}}. Influences/What needs to change"
-    file: chapters/appendix/_barriers.qmd
-  - text: "{{< var appendix.focus_group_emails >}}. Focus groups - emails"
-    file: chapters/appendix/focus_groups/emails.qmd
-  - text: "{{< var appendix.focus_group_information >}}. Focus groups - participant information"
-    file: chapters/appendix/focus_groups/participant_information.qmd
-  - text: "{{< var appendix.ideas >}}. Ideas generated from focus groups and workshops"
-    file: chapters/appendix/_ideas.qmd
-  - text: "{{< var appendix.ict >}}. Intervention component table"
-    file: chapters/appendix/_intervention_component_table.qmd
-  - text: "{{< var appendix.pilot_recruitment_image >}}. Authors interviews - recruitment image"
-    file: chapters/appendix/_pilot_recruitment_image.qmd
-  - text: "{{< var appendix.pilot_participant_information >}}. Author interviews - participant information"
-    file: chapters/appendix/_pilot_participant_information.qmd
-  - text: "{{< var appendix.pilot_emails >}}. Author interviews - emails"
-    file: chapters/appendix/_pilot_emails.qmd
-  - text: "{{< var appendix.pilot_interview_schedule >}}. Author interviews - interview schedule"
-    file: chapters/appendix/_pilot_interview_schedule.qmd
-  - text: "{{< var appendix.deficiencies >}}. Author interviews - deficiencies"
-    file: chapters/appendix/_deficiencies.qmd
-  site-url: https://jamesrharwood.github.io/thesis/
-  repo-url: https://github.com/jamesrharwood/thesis
-  repo-actions: [source, issue]
-  search: true
-
-thesis:
-  supervisor: 
-    name: |
-      Prof. Gary Collins
-      Dr. Charlotte Albury
-      Dr. Jennifer de Beyer
-      Dr. Michael Schlüssel
-  degree-name: Doctor of Philosophy
-  university: University of Oxford
-  department: Nuffield Department of Orthopaedics, Rheumatology and Musculoskeletal Sciences
-  group: UK EQUATOR Centre
-  faculty: Medical Sciences Division
-  acknowledgements: "Frontmatter/acknowledgements.tex"
-  abbreviations: "Frontmatter/abbreviations.tex"
-  symbols: "Frontmatter/symbols.tex"
+    - part: "Appendices"
+      chapters:
+        - text: "{{< var appendix.search >}}. Search Strategies"
+          file: chapters/appendix/_synthesis_search_strategies.qmd
+        - text: "{{< var appendix.workshop_step_1 >}}. BCW Step 1"
+          file: chapters/appendix/workshops/step_1.qmd
+        - text: "{{< var appendix.workshop_step_2 >}}. BCW Step 2"
+          file: chapters/appendix/workshops/step_2.qmd
+        - text: "{{< var appendix.workshop_step_3 >}}. BCW Step 3"
+          file: chapters/appendix/workshops/step_3.qmd
+        - text: "{{< var appendix.workshop_step_4 >}}. BCW Step 4"
+          file: chapters/appendix/workshops/step_4.qmd
+        - text: "{{< var appendix.workshop_step_5 >}}. BCW Step 5"
+          file: chapters/appendix/workshops/step_5.qmd
+        - text: "{{< var appendix.workshop_step_6 >}}. BCW Stage 6"
+          file: chapters/appendix/workshops/step_6.qmd
+        - text: "{{< var appendix.workshop_step_7 >}}. BCW Stage 7"
+          file: chapters/appendix/workshops/step_7.qmd
+        - text: "{{< var appendix.barriers >}}. Influences/What needs to change"
+          file: chapters/appendix/_barriers.qmd
+        - text: "{{< var appendix.focus_group_emails >}}. Focus groups - emails"
+          file: chapters/appendix/focus_groups/emails.qmd
+        - text: "{{< var appendix.focus_group_information >}}. Focus groups - participant information"
+          file: chapters/appendix/focus_groups/participant_information.qmd
+        - text: "{{< var appendix.ideas >}}. Ideas generated from focus groups and workshops"
+          file: chapters/appendix/_ideas.qmd
+        - text: "{{< var appendix.ict >}}. Intervention component table"
+          file: chapters/appendix/_intervention_component_table.qmd
+        - text: "{{< var appendix.pilot_recruitment_image >}}. Authors interviews - recruitment image"
+          file: chapters/appendix/_pilot_recruitment_image.qmd
+        - text: "{{< var appendix.pilot_participant_information >}}. Author interviews - participant information"
+          file: chapters/appendix/_pilot_participant_information.qmd
+        - text: "{{< var appendix.pilot_emails >}}. Author interviews - emails"
+          file: chapters/appendix/_pilot_emails.qmd
+        - text: "{{< var appendix.pilot_interview_schedule >}}. Author interviews - interview schedule"
+          file: chapters/appendix/_pilot_interview_schedule.qmd
+        - text: "{{< var appendix.deficiencies >}}. Author interviews - deficiencies"
+          file: chapters/appendix/_deficiencies.qmd
