--- a/_variables.yml
+++ b/_variables.yml
@@ -490,8 +490,8 @@ titles:
   introduction: Introduction
   pilot: 'Refining the intervention: interviewing authors and a qualitative description analysis'
   reflexivity: Reflections on starting my DPhil
-  survey_content: 'What influences might researchers encounter when using reporting guidelines? Part 2: Describing the questions asked in quantitative surveys.'
-  synthesis: 'What influences might researchers encounter when using reporting guidelines? Part 1: A thematic synthesis'
+  survey_content: 'What influences researchers when using reporting guidelines? Part 2: Describing the questions asked in quantitative surveys'
+  synthesis: 'What influences researchers when using reporting guidelines? Part 1: A Thematic Synthesis'
   website_audit: Describing who visits EQUATOR's website for disseminating reporting guidelines, and how visitors use it
   workshops: 'Following the behaviour change wheel guide: Workshops with reporting guideline experts'
 website-github-repo-url: https://github.com/jamesrharwood/equator-guidelines-website
