--- a/metadata/_website.yml
+++ b/metadata/_website.yml
@@ -51,38 +51,38 @@ website:
         file: chapters/11_discussion/index.qmd
       - section: "Appendix"
         contents:
-          - text: "{{< var appendix.search >}}. Search Strategies"
+          - text: "Search Strategies"
             file: chapters/appendix/_synthesis_search_strategies.qmd
-          - text: "{{< var appendix.workshop_step_1 >}}. BCW Step 1"
+          - text: "BCW Step 1"
             file: chapters/appendix/workshops/step_1.qmd
-          - text: "{{< var appendix.workshop_step_2 >}}. BCW Step 2"
+          - text: "BCW Step 2"
             file: chapters/appendix/workshops/step_2.qmd
-          - text: "{{< var appendix.workshop_step_3 >}}. BCW Step 3"
+          - text: "BCW Step 3"
             file: chapters/appendix/workshops/step_3.qmd
-          - text: "{{< var appendix.workshop_step_4 >}}. BCW Step 4"
+          - text: "BCW Step 4"
             file: chapters/appendix/workshops/step_4.qmd
-          - text: "{{< var appendix.barriers >}}. BCW Step 4 Consolidated"
+          - text: "BCW Step 4 Consolidated"
             file: chapters/appendix/_barriers.qmd
-          - text: "{{< var appendix.workshop_step_5 >}}. BCW Step 5"
+          - text: "BCW Step 5"
             file: chapters/appendix/workshops/step_5.qmd
-          - text: "{{< var appendix.workshop_step_6 >}}. BCW Stage 6"
+          - text: "BCW Stage 6"
             file: chapters/appendix/workshops/step_6.qmd
-          - text: "{{< var appendix.focus_group_emails >}}. Focus groups - emails"
+          - text: "Focus groups - emails"
             file: chapters/appendix/focus_groups/emails.qmd
-          - text: "{{< var appendix.focus_group_information >}}. Focus groups - participant information"
+          - text: "Focus groups - participant information"
             file: chapters/appendix/focus_groups/participant_information.qmd
-          - text: "{{< var appendix.ideas >}}. Ideas generated from focus groups and workshops"
+          - text: "Ideas generated from focus groups and workshops"
             file: chapters/appendix/_ideas.qmd
-          - text: "{{< var appendix.ict >}}. Intervention component table"
+          - text: "Intervention component table"
             file: chapters/appendix/_intervention_component_table.qmd
-          - text: "{{< var appendix.pilot_recruitment_image >}}. Authors interviews - recruitment image"
+          - text: "Authors interviews - recruitment image"
             file: chapters/appendix/_pilot_recruitment_image.qmd
-          - text: "{{< var appendix.pilot_participant_information >}}. Author interviews - participant information"
+          - text: "Author interviews - participant information"
             file: chapters/appendix/_pilot_participant_information.qmd
-          - text: "{{< var appendix.pilot_emails >}}. Author interviews - emails"
+          - text: "Author interviews - emails"
             file: chapters/appendix/_pilot_emails.qmd
-          - text: "{{< var appendix.pilot_interview_schedule >}}. Author interviews - interview schedule"
+          - text: "Author interviews - interview schedule"
             file: chapters/appendix/_pilot_interview_schedule.qmd
-          - text: "{{< var appendix.deficiencies >}}. Author interviews - deficiencies"
+          - text: "Author interviews - deficiencies"
             file: chapters/appendix/_deficiencies.qmd
           
