--- a/_variables.yml
+++ b/_variables.yml
@@ -490,9 +490,9 @@ titles:
   bcw: Selecting the Behaviour Change Wheel framework
   defining_content: Defining intervention components and developing a prototype
   discussion: Discussion
-  focus_groups: 'Generating ideas to address influences affecting reporting guideline adherence: focus groups with reporting guideline developers, advocates, and publishers'
+  focus_groups: 'Generating ideas to address influences: focus groups with reporting guideline developers, advocates, and publishers'
   introduction: Introduction
-  pilot: 'Refining the intervention: interviewing authors and a qualitative description analysis'
+  pilot: 'Refining the intervention: interviewing authors to identify deficient intervention components'
   reflexivity: Reflections on starting my DPhil
   survey_content: 'What influences researchers when using reporting guidelines? Part 2: Describing the questions asked in quantitative surveys'
   synthesis: 'What influences researchers when using reporting guidelines? Part 1: A Thematic Synthesis'
