--- a/_variables.yml
+++ b/_variables.yml
@@ -495,7 +495,7 @@ titles:
   pilot: 'Refining the intervention: interviewing authors to identify deficient intervention components'
   reflexivity: Reflections on starting my DPhil
   survey_content: 'What influences researchers when using reporting guidelines? Part 2: Describing the questions asked in quantitative surveys'
-  synthesis: 'What influences researchers when using reporting guidelines? Part 1: A Thematic Synthesis'
+  synthesis: 'What influences researchers when using reporting guidelines? Part 1: A thematic synthesis'
   website_audit: Describing who visits EQUATOR's website for disseminating reporting guidelines, and how visitors use it
   workshops: 'Following the behaviour change wheel guide: Workshops with reporting guideline experts'
 website-github-repo-url: https://github.com/jamesrharwood/equator-guidelines-website
